<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/fragment_bottom_margin"
    tools:context=".ui.indexes.IndexesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_indexes_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex_male" />
                    <RadioButton android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex_female" />

                </RadioGroup>

                <EditText
                    android:id="@+id/edit_text_age"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/placeholder_body_age"
                    android:layout_marginHorizontal="@dimen/input_horizontal_margin"
                    android:layout_marginVertical="@dimen/input_vertical_margin"
                    />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gerb"
                android:minWidth="150dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_index_1"
            android:text="@string/text_index_body_mass_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            />

        <Button
            android:id="@+id/button_index_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_movement_activity_short" />

        <Button
            android:id="@+id/button_index_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_endurance_coefficient_short" />

        <Button
            android:id="@+id/button_index_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_robinson_short" />

        <Button
            android:id="@+id/button_index_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_vital_short" />

        <Button
            android:id="@+id/button_index_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_skibinski_short" />

        <Button
            android:id="@+id/button_index_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_kerdo_short" />

        <Button
            android:id="@+id/button_index_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margin"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:text="@string/text_index_functional_changes_short" />
    </LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>